--- a/style.css
+++ b/style.css
@@ -2,8 +2,12 @@
     margin: 0;
 }
 
+:root {
+    --primary-color: #0000ff;
+}
+
 body{
-    background-color: #363636;
+    background-color: #4f4f4f;
 }
 
 .conteiner{
@@ -13,5 +17,41 @@ body{
 .side-bar{
     height: 100vh;
     width: 256px;
-    border-right: solid 3px #4f4f4f;
+    border-right: solid 3px #696969;
+}
+
+.button{
+    width: 256px;
+}
+
+.content{
+    margin: 20px 80px;
+    
+}
+
+.inner-content{
+    height: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    gap: 40px 40px;
+    justify-content: center;
+    align-content: center;
+}
+
+.card-game{
+    width: 150px;
+    height: 150px;
+    background-color: #808080;
+    text-align: center;
+    border-radius: 10%;
+    overflow: hidden;
+}
+
+.card-game img{
+    width: 100%;
+}
+
+.card-game:hover{
+    border: solid 4px var(--primary-color);
+    box-shadow: 5px 2px 10px var(--primary-color);
 }
