--- a/style.css
+++ b/style.css
@@ -3,12 +3,11 @@
 }
 
 :root {
-    --primary-color: #0000ff;
+    --primary-color: #00a6ff;
 }
 
 body{
     background-color: #4f4f4f;
-    color: #fff;
 }
 
 .conteiner{
@@ -17,7 +16,7 @@ body{
 
 .side-bar{
     height: 100vh;
-    width: 256px;
+    width: 290px;
     border-right: solid 3px #696969;
 }
 
@@ -29,23 +28,27 @@ body{
     background-color: #4f4f4f;
 } */
 
-.button, .button-active{
-    width: 202px;
-    height: 50px;
-    padding: 25px 0px 0px 50px;
+/* Button */
+
+.button, .active{
+    width: 239px;
+    height: 30px;
+    padding: 15px 0px 0px 50px;
 }
 
-.button-active{
-    background-color: #6969696f;
+.active{
+    background-color: var(--primary-color);
     border-right: solid 4px var(--primary-color);
-    border-radius: 0px 4px 4px 0px;
+    border-radius: 0px 6px 6px 0px;
 }
 
-.button a, .button-active a{
+.button a {
     text-decoration: none;
     color: #fff;
     align-content: space-around;
 }
+
+/*  */
 
 .divider{
     height: 1px;
@@ -54,7 +57,7 @@ body{
 }
 
 .content{
-    margin: 20px 80px;
+    margin: 20px 40px;
     
 }
 
@@ -62,28 +65,77 @@ body{
     height: 100%;
     display: flex;
     flex-flow: row wrap;
-    gap: 10px 10px;
-    justify-content: center;
+    gap: 2px 2px;
     align-content: center;
 }
 
-.card-game{
+/* Card Game */
+
+.cardBorder{
+    width: 164px;
+    height: 164px;
+    padding: 3px;
+    border: solid 3px #ffffff00;
+    border-radius: 8px;
+    box-shadow: 0 0 8px 2px #ffffff00;
+}
+
+.cardBorder:hover{
+    border: solid 3px var(--primary-color);
+    box-shadow: 0 0 8px 2px var(--primary-color);
+}
+
+.cardGame{
+    position: relative;
+    width: 164px;
+    height: 164px;
+    border-radius: 4px;
+    background-color: #808080;
+    overflow: hidden;
+}
+
+.cardGame img {
+    width: 100%;
+}
+
+.cardBottom{
+    position: absolute;
+    width: 164px;
+    height: 25%;
+    bottom: 0;
+    background-color: #00000000;
+}
+
+.card-game, .activeCard{
+    position: relative;
     width: 150px;
     height: 150px;
     background-color: #808080;
     text-align: center;
-    border-radius: 10%;
+    color: #fff;
+    border-radius: 2%;
     overflow: hidden;
+    border: solid 5px #ffffff00;
+    box-shadow: 0 0 8px 2px #ffffff00;
+    
 }
 
-.card-game img{
+.card-game img, .activeCard img{
     width: 100%;
 }
 
-/* .card-game:hover{
+.activeCard{
     border: solid 4px var(--primary-color);
-    box-shadow: 5px 2px 10px var(--primary-color);
-} */
+    /* box-shadow: 5px 2px 10px var(--primary-color); */
+}
+
+.cardName{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    background-color: #00000080;
+    
+}
 
 .profile{
     display: flex;
