--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
 .side-bar{
     height: 100vh;
     width: 290px;
-    border-right: solid 3px #696969;
+    border-right: solid 1px #696969;
 }
 
 /* .side-bar-profile{
@@ -28,18 +28,88 @@ body{
     background-color: #4f4f4f;
 } */
 
+/* Profile */
+
+.profile{
+    display: flex;
+    column-gap: 10px;
+    align-items: center;
+    margin: 40px 30px 30px;
+}
+
+.img-profile{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color: #808080;
+}
+
+.img-profile img{
+    width: 100%;   
+}
+
+/* Search */
+
+.box{
+    display: flex;
+    justify-content: center;
+    margin: 30px 0px;
+}
+
+.searchBorder{
+    padding: 3px;
+    border: solid 3px #ffffff00;
+    border-radius: 50px;
+    box-shadow: 0 0 8px 2px #ffffff00;
+}
+
+.searchBorder:hover{
+    border: solid 3px var(--primary-color);
+    box-shadow: 0 0 8px 2px var(--primary-color);
+}
+
+.search{
+    display: flex;
+    width: 220px;
+    height: 40px;
+}
+
+.search input{
+    width: 100%;
+    border: none;
+    outline: none;
+    padding-left: 50px;
+    border-radius: 50px;
+    background-color: #808080;
+    color: #fff;
+}
+
+.search input::placeholder{
+    color: #fff;
+    font-size: 1em;
+}
+
 /* Button */
 
-.button, .active{
-    width: 239px;
+.button{
+    width: 234px;
     height: 30px;
     padding: 15px 0px 0px 50px;
 }
 
-.active{
+.button:hover{
     background-color: var(--primary-color);
-    border-right: solid 4px var(--primary-color);
+    border-right: solid 7px var(--primary-color);
     border-radius: 0px 6px 6px 0px;
+    box-shadow: 0 0 8px 2px var(--primary-color);
+}
+
+.active{
+    background-color: #5f5f5fa4;
+    border-right: solid 7px var(--primary-color);
+    border-radius: 0px 6px 6px 0px;
+    box-shadow: 0 0 8px 2px #ffffff00;
 }
 
 .button a {
@@ -48,16 +118,16 @@ body{
     align-content: space-around;
 }
 
-/*  */
-
 .divider{
     height: 1px;
     background-color: #696969;
     margin: 20px;
 }
 
+/* Content */
+
 .content{
-    margin: 20px 40px;
+    margin: 40px 40px;
     
 }
 
@@ -104,54 +174,4 @@ body{
     height: 25%;
     bottom: 0;
     background-color: #00000000;
-}
-
-.card-game, .activeCard{
-    position: relative;
-    width: 150px;
-    height: 150px;
-    background-color: #808080;
-    text-align: center;
-    color: #fff;
-    border-radius: 2%;
-    overflow: hidden;
-    border: solid 5px #ffffff00;
-    box-shadow: 0 0 8px 2px #ffffff00;
-    
-}
-
-.card-game img, .activeCard img{
-    width: 100%;
-}
-
-.activeCard{
-    border: solid 4px var(--primary-color);
-    /* box-shadow: 5px 2px 10px var(--primary-color); */
-}
-
-.cardName{
-    position: absolute;
-    width: 100%;
-    bottom: 0;
-    background-color: #00000080;
-    
-}
-
-.profile{
-    display: flex;
-    column-gap: 10px;
-    align-items: center;
-    margin: 50px 20px;
-}
-
-.img-profile{
-    width: 70px;
-    height: 70px;
-    background-color: #808080;
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.img-profile img{
-    width: 100%;   
 }
